--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 services:
     skat_proxy:
+        image: ncbrj/dmr-proxy
         container_name: skat_proxy
         ports: 
             - "8888:8080"
