--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
             - "8888:8080"
         cap_add:
             - NET_ADMIN
+        volumes:
+            - .\vars.config:/mnt/vars.config
         privileged: true
         tty: true
         network_mode: "bridge"
-        build:
-            context: '.'
